kubernetes/orion/manifests/default/heimdall/heimdall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heimdall
  name: heimdall
  namespace: heimdall
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
        - name: heimdall-config
          persistentVolumeClaim:
            claimName: heimdall-pvc-config
        - name: tmp
          emptyDir: {}
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:2.6.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /config
              name: heimdall-config
            - mountPath: /tmp
              name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
