kubernetes/orion/manifests/default/heimdall/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  type: ClusterIP
