kubernetes/orion/manifests/default/heimdall/heimdall-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: heimdall-route
  namespace: heimdall
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - "dashboard.bou1der.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: heimdall-service
          port: 80
